gcc/testsuite/g++.old-deja/g++.jason/rfg25.C
// { dg-do assemble  }
struct { int :0; };  /* { dg-error "" } anon struct not used to declare objects */
